--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: xupeR
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Title: baidu xuper saas sdk in R
+Version: 0.2.0
+Author: zhangxin,lishun,hulilei
+Maintainer: <hulilei@takewiki.com.cn>
+Description: baidu only provide the java sdk
+    we write the API to use python as brige on top on jar file.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.0.2
